// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Building launchs init 1`] = `
<DocumentFragment>
  <div
    class="sc-jhAzac fcvVVd"
  >
    <h1
      class="sc-fBuWsC dwCHtN"
    >
      Publish a space
    </h1>
    <div
      class="sc-gzVnrw hoPjrS"
    >
      <div
        class="sc-dnqmqq gwXewl"
      >
        <svg
          height="58"
          width="50"
        >
          <title>
            flat
          </title>
          <g
            fill="none"
            fill-rule="nonzero"
          >
            <path
              d="M42.457 55H26V11h18v36.767l-1.543 2.417z"
              fill="#FF4E01"
              fill-opacity="0.7"
            />
            <path
              d="M28 5h-2.738L23 24.26 25.262 55 28 54.59z"
              fill="#FDAE02"
            />
            <path
              d="M2.773 0v4.885H0V55.13L15.676 57 26 55.545V0z"
              fill="#FDCB02"
            />
            <g
              fill="#F3FFFB"
            >
              <path
                d="M8.078 11.06h3.397v4.838H8.078zM16.534 11.06h3.397v4.838h-3.397zM8.078 20.735h3.397v4.837H8.078zM16.534 20.735h3.397v4.837h-3.397zM8.078 30.41h3.397v4.836H8.078zM16.534 30.41h3.397v4.836h-3.397zM8.078 40.083h3.397v4.837H8.078zM16.534 40.083h3.397v4.837h-3.397z"
              />
            </g>
            <path
              d="M33 21h3v5h-3zM33 31h3v5h-3z"
              fill="#FFD27B"
            />
            <path
              d="M41 48h3v8h-3z"
              fill="#8F4D24"
            />
            <path
              d="M42.5 52c-4.135 0-7.5-3.365-7.5-7.5 0-4.136 3.365-7.5 7.5-7.5 4.136 0 7.5 3.364 7.5 7.5 0 4.135-3.364 7.5-7.5 7.5z"
              fill="#A8D32A"
            />
            <path
              d="M50 55H26.19L25 56.95 26.19 58H50z"
              fill="#8D9CA8"
            />
            <path
              d="M0 55h26v3H0z"
              fill="#AAB8C7"
            />
          </g>
        </svg>
        <h2
          class="sc-bZQynM sc-iwsKbI eIOHCY"
        >
          Building location and amenities
        </h2>
      </div>
      <div
        class="sc-htoDjs isDmbD"
      />
    </div>
    <div
      class="sc-bxivhb heZAUk"
    >
      <h4
        class="sc-htpNat ezOBiL"
      >
        Register a new building in Spacespot or use an existing one?
      </h4>
      <div
        class="sc-ifAKCX jeKXEu"
      >
        <button
          class="sc-bwzfXH sc-EHOje iRNIDo"
          data-testid="existing-building"
          disabled=""
        >
          Use existing building
        </button>
        <button
          class="sc-bwzfXH sc-EHOje gATSaV"
          data-testid="new-building"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root sc-bdVaJa bYrkLc"
            color="#6CB9D5"
            focusable="false"
            role="presentation"
            viewBox="0 0 24 24"
          >
            <path
              d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm-2 15l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
            />
          </svg>
          Register new building
        </button>
      </div>
    </div>
    <div
      class="sc-kkGfuU jVShqy"
    >
      <div
        class="sc-iAyFgw eaSGxX"
      >
        <h3
          class="sc-cSHVUG sc-kEYyzF eNhDyN"
        >
          Building location
        </h3>
        <div />
        <div
          class="sc-eHgmQL ezKYXT"
        >
          <div
            class="sc-jTzLTM khyhXL sc-jWBwVP eEuCeh"
          >
            <label
              for="city"
            >
              City
            </label>
            <input
              class="sc-fjdhpX hiwieK"
              id="city"
              type="text"
              value=""
            />
            <div
              class="sc-jzJRlG ezwPoc"
            />
          </div>
          <div
            class="sc-jTzLTM khyhXL sc-jWBwVP bsmHVp"
          >
            <label
              for="postCode"
            >
              Post Code
            </label>
            <input
              class="sc-fjdhpX hiwieK"
              id="postCode"
              type="text"
              value=""
            />
            <div
              class="sc-jzJRlG ezwPoc"
            />
          </div>
        </div>
        <div
          class="sc-eHgmQL ezKYXT"
        >
          <div
            class="sc-brqgnP gRBWEG"
          />
        </div>
        <div
          class="sc-ckVGcZ kFmcxy"
        >
          <label
            for="location"
          >
            Location description (optional)
          </label>
          <div />
          <div
            class="sc-eNQAEJ fhCOrJ"
          />
        </div>
      </div>
      <div
        class="sc-hSdWYo gIADfw"
      />
    </div>
    <div
      class="sc-Rmtcm bcWhQn"
    >
      <h3
        class="sc-cSHVUG sc-csuQGl hxobHv"
      >
        Building amenities
      </h3>
      <div
        class="sc-bRBYWo BbUoW"
      >
        Select the building amenities that are available to 
        <b>
          ALL spaces
        </b>
         within this building.
      </div>
      <div
        class="sc-gipzik hTHDlC"
      >
        <label
          class="sc-jlyJG zeOPt"
        >
          Gym
          <input
            checked=""
            type="checkbox"
          />
          <span />
        </label>
      </div>
    </div>
    <div
      class="sc-jAaTju fStHmW"
    >
      <div
        class="sc-jDwBTQ lftfRO"
      />
      <button
        class="sc-cMljjf sc-iRbamj jNaINW"
        data-testid="button-next"
        id="button-next"
      >
        CONTINUE
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Building: already initialized 1`] = `
<DocumentFragment>
  <div
    class="sc-jhAzac fcvVVd"
  >
    <h1
      class="sc-fBuWsC dwCHtN"
    >
      Publish a space
    </h1>
    <div
      class="sc-gzVnrw hoPjrS"
    >
      <div
        class="sc-dnqmqq gwXewl"
      >
        <svg
          height="58"
          width="50"
        >
          <title>
            flat
          </title>
          <g
            fill="none"
            fill-rule="nonzero"
          >
            <path
              d="M42.457 55H26V11h18v36.767l-1.543 2.417z"
              fill="#FF4E01"
              fill-opacity="0.7"
            />
            <path
              d="M28 5h-2.738L23 24.26 25.262 55 28 54.59z"
              fill="#FDAE02"
            />
            <path
              d="M2.773 0v4.885H0V55.13L15.676 57 26 55.545V0z"
              fill="#FDCB02"
            />
            <g
              fill="#F3FFFB"
            >
              <path
                d="M8.078 11.06h3.397v4.838H8.078zM16.534 11.06h3.397v4.838h-3.397zM8.078 20.735h3.397v4.837H8.078zM16.534 20.735h3.397v4.837h-3.397zM8.078 30.41h3.397v4.836H8.078zM16.534 30.41h3.397v4.836h-3.397zM8.078 40.083h3.397v4.837H8.078zM16.534 40.083h3.397v4.837h-3.397z"
              />
            </g>
            <path
              d="M33 21h3v5h-3zM33 31h3v5h-3z"
              fill="#FFD27B"
            />
            <path
              d="M41 48h3v8h-3z"
              fill="#8F4D24"
            />
            <path
              d="M42.5 52c-4.135 0-7.5-3.365-7.5-7.5 0-4.136 3.365-7.5 7.5-7.5 4.136 0 7.5 3.364 7.5 7.5 0 4.135-3.364 7.5-7.5 7.5z"
              fill="#A8D32A"
            />
            <path
              d="M50 55H26.19L25 56.95 26.19 58H50z"
              fill="#8D9CA8"
            />
            <path
              d="M0 55h26v3H0z"
              fill="#AAB8C7"
            />
          </g>
        </svg>
        <h2
          class="sc-bZQynM sc-iwsKbI eIOHCY"
        >
          Building location and amenities
        </h2>
      </div>
      <div
        class="sc-htoDjs isDmbD"
      />
    </div>
    <div
      class="sc-bxivhb heZAUk"
    >
      <h4
        class="sc-htpNat ezOBiL"
      >
        Register a new building in Spacespot or use an existing one?
      </h4>
      <div
        class="sc-ifAKCX jeKXEu"
      >
        <button
          class="sc-bwzfXH sc-EHOje cGvpax"
          data-testid="existing-building"
          disabled=""
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root sc-bdVaJa bYrkLc"
            color="#6CB9D5"
            focusable="false"
            role="presentation"
            viewBox="0 0 24 24"
          >
            <path
              d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm-2 15l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
            />
          </svg>
          Use existing building
        </button>
        <button
          class="sc-bwzfXH sc-EHOje jPutGp"
          data-testid="new-building"
        >
          Register new building
        </button>
      </div>
    </div>
    <h4
      class="sc-htpNat ezOBiL"
    >
      Select the building where your space is located.
    </h4>
  </div>
</DocumentFragment>
`;

exports[`Building: initOK  1`] = `
<DocumentFragment>
  <div
    class="sc-jhAzac fcvVVd"
  >
    <h1
      class="sc-fBuWsC dwCHtN"
    >
      Publish a space
    </h1>
    <div
      class="sc-gzVnrw hoPjrS"
    >
      <div
        class="sc-dnqmqq gwXewl"
      >
        <svg
          height="58"
          width="50"
        >
          <title>
            flat
          </title>
          <g
            fill="none"
            fill-rule="nonzero"
          >
            <path
              d="M42.457 55H26V11h18v36.767l-1.543 2.417z"
              fill="#FF4E01"
              fill-opacity="0.7"
            />
            <path
              d="M28 5h-2.738L23 24.26 25.262 55 28 54.59z"
              fill="#FDAE02"
            />
            <path
              d="M2.773 0v4.885H0V55.13L15.676 57 26 55.545V0z"
              fill="#FDCB02"
            />
            <g
              fill="#F3FFFB"
            >
              <path
                d="M8.078 11.06h3.397v4.838H8.078zM16.534 11.06h3.397v4.838h-3.397zM8.078 20.735h3.397v4.837H8.078zM16.534 20.735h3.397v4.837h-3.397zM8.078 30.41h3.397v4.836H8.078zM16.534 30.41h3.397v4.836h-3.397zM8.078 40.083h3.397v4.837H8.078zM16.534 40.083h3.397v4.837h-3.397z"
              />
            </g>
            <path
              d="M33 21h3v5h-3zM33 31h3v5h-3z"
              fill="#FFD27B"
            />
            <path
              d="M41 48h3v8h-3z"
              fill="#8F4D24"
            />
            <path
              d="M42.5 52c-4.135 0-7.5-3.365-7.5-7.5 0-4.136 3.365-7.5 7.5-7.5 4.136 0 7.5 3.364 7.5 7.5 0 4.135-3.364 7.5-7.5 7.5z"
              fill="#A8D32A"
            />
            <path
              d="M50 55H26.19L25 56.95 26.19 58H50z"
              fill="#8D9CA8"
            />
            <path
              d="M0 55h26v3H0z"
              fill="#AAB8C7"
            />
          </g>
        </svg>
        <h2
          class="sc-bZQynM sc-iwsKbI eIOHCY"
        >
          Building location and amenities
        </h2>
      </div>
      <div
        class="sc-htoDjs isDmbD"
      />
    </div>
    <div
      class="sc-bxivhb heZAUk"
    >
      <h4
        class="sc-htpNat ezOBiL"
      >
        Register a new building in Spacespot or use an existing one?
      </h4>
      <div
        class="sc-ifAKCX jeKXEu"
      >
        <button
          class="sc-bwzfXH sc-EHOje gATSaV"
          data-testid="existing-building"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root sc-bdVaJa bYrkLc"
            color="#6CB9D5"
            focusable="false"
            role="presentation"
            viewBox="0 0 24 24"
          >
            <path
              d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm-2 15l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
            />
          </svg>
          Use existing building
        </button>
        <button
          class="sc-bwzfXH sc-EHOje jPutGp"
          data-testid="new-building"
        >
          Register new building
        </button>
      </div>
    </div>
    <h4
      class="sc-htpNat ezOBiL"
    >
      Select the building where your space is located.
    </h4>
    <div
      class="sc-gZMcBi etLOPi"
    >
      <h2
        class="sc-gqjmRU hRCkWk"
      >
        Newly Refurbished 6th Floor Office Space Available
      </h2>
      <h3
        class="sc-VigVT fgjxlz"
      >
        <div />
      </h3>
    </div>
  </div>
</DocumentFragment>
`;
